--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,5 @@ jobs:
     - name: Check code style with Black
       uses: psf/black@stable
       with:
-        paths: |
-          common/**
-          **/*run.py
-          **/*adapter.py
+        options: "--check --verbose"
+        src: "./common"
