--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,11 @@ jobs:
       with:
         python-version: "3.10"
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install black
+
     - name: Check code style with Black
       run: |
         find ./ -maxdepth 2 -mindepth 2 -type f -name '*.py' -exec black --check --verbose {} +
